--- a/tictactoe-network-client/tictactoe-network-client/tictactoe-network-client.csproj
+++ b/tictactoe-network-client/tictactoe-network-client/tictactoe-network-client.csproj
@@ -46,16 +46,16 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Form1.cs">
+        <Compile Include="TicTacToe-Client.cs">
             <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Form1.Designer.cs">
-            <DependentUpon>Form1.cs</DependentUpon>
+        <Compile Include="TicTacToe-Client.Designer.cs">
+            <DependentUpon>TicTacToe-Client.cs</DependentUpon>
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <EmbeddedResource Include="Form1.resx">
-          <DependentUpon>Form1.cs</DependentUpon>
+        <EmbeddedResource Include="TicTacToe-Client.resx">
+          <DependentUpon>TicTacToe-Client.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
