--- a/tictactoe-network-server/tictactoe-network-server/tictactoe-network-server.csproj
+++ b/tictactoe-network-server/tictactoe-network-server/tictactoe-network-server.csproj
@@ -46,17 +46,18 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Form1.cs">
+        <Compile Include="Game.cs" />
+        <Compile Include="TicTacToe-Server.cs">
             <SubType>Form</SubType>
         </Compile>
-        <Compile Include="Form1.Designer.cs">
-            <DependentUpon>Form1.cs</DependentUpon>
+        <Compile Include="TicTacToe-Server.Designer.cs">
+            <DependentUpon>TicTacToe-Server.cs</DependentUpon>
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="User.cs" />
-        <EmbeddedResource Include="Form1.resx">
-          <DependentUpon>Form1.cs</DependentUpon>
+        <EmbeddedResource Include="TicTacToe-Server.resx">
+          <DependentUpon>TicTacToe-Server.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
