--- a/tictactoe-network-server/tictactoe-network-server/tictactoe-network-server.csproj
+++ b/tictactoe-network-server/tictactoe-network-server/tictactoe-network-server.csproj
@@ -47,6 +47,8 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Game.cs" />
+        <Compile Include="Player.cs" />
+        <Compile Include="PlayerPair.cs" />
         <Compile Include="TicTacToe-Server.cs">
             <SubType>Form</SubType>
         </Compile>
